// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with leftNav prop 1`] = `
<div
  className="sc-brqgnP kGZrBP"
/>
`;

exports[`renders correctly with no props 1`] = `
<div
  className="sc-brqgnP bHQSNg"
/>
`;

exports[`renders correctly with sidebar prop 1`] = `
<div
  className="sc-brqgnP kJLqLv"
/>
`;
